--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,29 +1,17 @@
 <h2>Personnages</h2>
 <div class="row">
+  <pagination-controls class="text-center" previousLabel="Précedent" nextLabel="Suivant" (pageChange)="p = $event"></pagination-controls>
   <div class="card-group">
-    <div class="col-4" *ngFor="let character of characters">
-      <div class="card">
-        <img src="{{character.img}}" class="card-img-top img-card" alt="{{character.nickname}}">
+    <div class="col-lg-4 col-md-6" *ngFor="let character of characters | paginate: {itemsPerPage: 12, currentPage: p}">
+      <div class="card bb-card">
+        <img src="{{character.img}}" class="card-img-top pulse" alt="{{character.nickname}}" (click)="characterDetails(character.char_id)">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-            This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title text-center">{{character.name}}</h5>
+          <p class="card-text">{{character.occupation}}</p>
+          <p class="card-text bb-status"><small class="text-muted mx-auto">{{character.status}}</small></p>
         </div>
       </div>
     </div>
-
-
-
-
   </div>
 </div>
-  <ul>
-    <li *ngFor="let character of characters">
-      <a routerLink="/detail/{{character.char_id}}">
-        <span class="badge">{{character.char_id}}</span> {{character.name}}
-      </a>
-
-    </li>
-
-  </ul>
+<pagination-controls class="text-center" (pageChange)="p = $event"></pagination-controls>
