--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,10 +1,13 @@
 <h2>Personnages</h2>
-<div class="row">
-  <pagination-controls class="text-center" previousLabel="Précedent" nextLabel="Suivant" (pageChange)="p = $event"></pagination-controls>
+<!--  if search control is not used display all characters-->
+<div class="row" >
+  <pagination-controls class="text-center" previousLabel="Précedent" nextLabel="Suivant"
+                       (pageChange)="p = $event"></pagination-controls>
   <div class="card-group">
     <div class="col-lg-4 col-md-6" *ngFor="let character of characters | paginate: {itemsPerPage: 12, currentPage: p}">
       <div class="card bb-card">
-        <img src="{{character.img}}" class="card-img-top pulse" alt="{{character.nickname}}" (click)="characterDetails(character.char_id)">
+        <img src="{{character.img}}" class="card-img-top pulse" alt="{{character.nickname}}"
+             (click)="characterDetails(character.char_id)">
         <div class="card-body">
           <h5 class="card-title text-center">{{character.name}}</h5>
           <p class="card-text">{{character.occupation}}</p>
@@ -12,6 +15,9 @@
         </div>
       </div>
     </div>
+    <pagination-controls class="text-center" (pageChange)="p = $event"></pagination-controls>
   </div>
 </div>
-<pagination-controls class="text-center" (pageChange)="p = $event"></pagination-controls>
+
+
+
